Limit fixed for display

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -8,26 +8,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Proyecto de Programación Backend II</h2>
-
+    
     <section class="section make-it-normal">
         <div class="">
-            <div class="make-it-rounded make-it-semi-back make-it-normal make-it-left">
-                <p class="card-title-container make-it-white make-it-dark-back">Sobre este proyecto</p>
-                <br>
-                <p class="section">
-                    El proyecto consiste en un backend para una tienda ficticia llamada <b>'Shopnhour'</b> que vende modelos de trenes. 
-                    Integra una base de datos (MongoDB) sobre Node.js y Express para montar un servicio de backend que 
-                    provee un catálogo de productos, gestión de carritos de compras y generación de tickets. 
-                    Se utiliza autenticación mediante JWT, diferenciando usuarios comunes y administradores.
-                </p>
-                <br>
-            </div>
 
             <div class="columns is-multiline section">
-                <div class="column is-6 make-it-white">
+                <div class="column is-12">
+                    <div class="box make-it-rounded make-it-light-back make-it-normal make-it-left">
+                        
+                        <br>
+                        
+                        <p class="section">
+                            <img src="/static/shopnhour_blue.png" class="small-logo-image">
+                            <br>
+                            <br>
+                            El proyecto consiste en un backend para una tienda ficticia llamada <b>'Shopnhour'</b> que vende modelos de trenes. 
+                            Integra una base de datos (MongoDB) sobre Node.js y Express para montar un servicio de backend que 
+                            provee un catálogo de productos, gestión de carritos de compras y generación de tickets. 
+                            Se utiliza autenticación mediante JWT, diferenciando usuarios comunes y administradores.
+                        </p>
+                        <br>
+                        
+                    </div>
+                </div>
+                
+                <div class="column is-6">
                     <p class="card-title-container make-it-white make-it-rounded-top make-it-dark-back">> Navegación y uso</p>
-                    <div class="section make-it-semi-back make-it-dark make-it-small make-it-rounded-bottom">
+                    <div class="section make-it-semi-back make-it-dark make-it-normal make-it-rounded-bottom">
                         <ul>
                             <li><b>/</b> - Página principal (esta página).</li>
                             <li><b>/products</b> - Catálogo completo de productos.</li>
