--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -13,11 +13,11 @@
 
     <header class="title-bar-container other-bar is-frozen make-it-semi-back make-it-normal grid-container-3c-by-1r-special ">
         <div class="navbar-brand">
-            <a class="navbar-item" href="/">
+            <a class="section" href="/">
                 <img class="logo-image" src="/static/shopnhour_blue.png" alt="Shopnhour Store Logo">
             </a>
         </div>
-
+        <div></div>
         <div class="grid-container-3c-by-1r-special make-it-rounded small-section make-it-normal">
             <div></div>
             <div class="grid-container-3c-by-1r-special">
