--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -65,6 +65,9 @@ body {
   justify-content: center;
   padding: 0;
   margin: 0;
+  border: solid;
+  border-width: 1px;
+  border-color: #383836 !important;
 }
 
 .cart-count {
@@ -114,7 +117,7 @@ body {
   padding: .2rem .5rem;
   font-size: .9rem;
   position: relative;
-  width: 6.5rem
+  width: 8rem
 }
 
 .logo-back {
@@ -803,7 +806,7 @@ textarea:focus {
     background-position: center;
     background-repeat: repeat-x;
     background-attachment: fixed;
-    padding: 8.5rem 1rem 4rem 1rem !important;
+    
   }
 
   .grid-container-3c-by-1r{
