--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
             </a>
         </div>
         <div></div>
-        <div class="grid-container-3c-by-1r-special make-it-rounded small-section make-it-normal">
+        <div class="grid-container-3c-by-1r-special make-it-rounded small-section make-it-small">
             <div></div>
             <div class="grid-container-3c-by-1r-special">
                 <a class="navbar-item make-it-rounded make-it-dark" href="/products">
