Add to cart button fixed

--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -82,7 +82,7 @@
                                     </div>
                                     <div class="make-it-right section">
                                         <button 
-                                            class="button is-small is-warning make-it-normal" 
+                                            class="button is-small is-warning make-it-normal add-to-cart-btn" 
                                             data-product='{{{stringify this}}}'>
                                             Add to Cart
                                         </button>
