--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -58,7 +58,7 @@
                 if (user.role === "admin") {
                     adminButtonContainer.innerHTML = `
                         <a href="/admin" class="navbar-item make-it-normal button">
-                            Go to Admin Panel
+                            Admin Panel
                         </a>
                     `;
                 }
