Fixed cosmetic errors

--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                             <div class="make-it-right section">
-                                <a href="/products" class="button is-small is-link make-it-small" style="margin-top: 0.5rem;">
+                                <a href="/products" class="button is-small make-it-small" style="margin-top: 0.5rem;">
                                     Back
                                 </a>
                             </div>
