DTO extended to views

--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -1,3 +1,4 @@
+{{!-- views/current.handlebars --}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,65 +13,27 @@
     <section class="">
         <div class="section make-it-light-back make-it-small">
             <div id="userInfo" class="box make-it-dark">
-                Loading...
+                <p><strong>Username:</strong> {{user.username}}</p>
+                <p><strong>Email:</strong> {{user.email}}</p>
+                <p><strong>First Name:</strong> {{user.firstName}}</p>
+                <p><strong>Last Name:</strong> {{user.lastName}}</p>
+                <p><strong>Age:</strong> {{user.age}}</p>
+                <p><strong>Cart ID:</strong> {{user.cartId}}</p>
+                <p><strong>Role:</strong> {{user.role}}</p>
             </div>
+
             <div class="grid-container-3c-by-1r">
                 <div></div>
                 <div class="">
                     <a href="/logout" class="navbar-item is-warning make-it-normal button">Logout</a>
                 </div>
-                <div id="adminButtonContainer" class="">
-                    
+                <div class="">
+                    {{#if (eq user.role "admin")}}
+                        <a href="/admin" class="navbar-item make-it-normal button">Admin Panel</a>
+                    {{/if}}
                 </div>
             </div>
         </div>
     </section>
-
-    <script>
-        const userInfo = document.getElementById("userInfo");
-        const adminButtonContainer = document.getElementById("adminButtonContainer");
-        const token = localStorage.getItem("token");
-
-        async function loadUser() {
-            try {
-                const res = await fetch("/api/sessions/current", {
-                    headers: {
-                        Authorization: `Bearer ${token}`
-                    }
-                });
-
-                if (!res.ok) {
-                    throw new Error("Not authenticated");
-                }
-
-                const { user } = await res.json();
-
-                userInfo.innerHTML = `
-                    <p><strong>Username:</strong> ${user.username}</p>
-                    <p><strong>Email:</strong> ${user.email}</p>
-                    <p><strong>First Name:</strong> ${user.first_name}</p>
-                    <p><strong>Last Name:</strong> ${user.last_name}</p>
-                    <p><strong>Age:</strong> ${user.age}</p>
-                    <p><strong>Cart ID:</strong> ${user.cartId}</p>
-                    <p><strong>Role:</strong> ${user.role}</p>
-                `;
-
-                if (user.role === "admin") {
-                    adminButtonContainer.innerHTML = `
-                        <a href="/admin" class="navbar-item make-it-normal button">
-                            Admin Panel
-                        </a>
-                    `;
-                }
-            } catch (err) {
-                userInfo.innerHTML = `
-                    <p class="has-text-danger">⚠️ You are not logged in.</p>
-                    <a href="/login" class="button is-warning mt-3">Go to Login</a>
-                `;
-            }
-        }
-
-        loadUser();
-    </script>
 </body>
 </html>
