--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body class="splash-page-home make-it-normal">
 
@@ -21,12 +22,12 @@
         <div class="grid-container-3c-by-1r-special make-it-rounded small-section make-it-small">
             <div></div>
             <div class="grid-container-3c-by-1r-special">
-                <a class="navbar-item make-it-rounded make-it-dark make-it-7-wide" href="/products">
+                <a class="navbar-item make-it-rounded make-it-dark make-it-8-wide" href="/products">
                     <span><i class="fas fa-box-open small-section"></i>Products</span>
                 </a>
                 {{#if user}}
                     <div class="">
-                        <a class="navbar-item make-it-rounded make-it-dark make-it-7-wide" href="/current/">
+                        <a class="navbar-item make-it-rounded make-it-dark make-it-8-wide" href="/current/">
                             <span><i class="fas fa-user small-section"></i>{{user.username}}</span>
                         </a>
                     </div>
