--- a/src/views/ticketsStatic.handlebars
+++ b/src/views/ticketsStatic.handlebars
@@ -17,10 +17,10 @@
         <div class="container make-it-dark">
             <div class="columns is-multiline is-centered">
                 <div class="column is-10">
-                    <div class="make-it-dark-back is-centered grid-container-3c-by-1r" role="navigation" aria-label="pagination">
+                    <div class="rt-general-page-footer make-it-dark-back is-centered grid-container-3c-by-1r-special" role="navigation" aria-label="pagination">
                         <a class="button section make-it-small" href="?page={{prevPage}}&limit={{limit}}">Prev page</a>
 
-                        <div class="section make-it-center make-it-rounded make-it-semi-back make-it-white">
+                        <div class="">
                             Page {{currentPage}} of {{totalPages}}
                         </div>
 
