--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -14,23 +14,23 @@
         const userCartId = {{#if user}}"{{user.cartId}}"{{else}}null{{/if}};
     </script>
 
-    <section class="">
-        <div class="rt-general-page-footer make-it-semi-back is-centered grid-container-3c-by-1r-special" role="navigation" aria-label="pagination">
-            <div class="make-it-center make-it-100percent-wide">
-                <a class="navbar-item make-it-rounded make-it-small" 
-                    href="?page={{prevPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}" 
-                    {{#if (eq currentPage 1)}}disabled{{/if}}>Prev
-                </a>
+    <section class="make-it-wide">
+        <div class="rt-general-page-footer is-centered grid-container-3c-by-1r-special" role="navigation" aria-label="pagination">
+            
+            <a class="button section make-it-small" 
+                href="?page={{prevPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}" 
+                {{#if (eq currentPage 1)}}disabled{{/if}}>Prev
+            </a>
+
+            <div class="section make-it-center make-it-rounded make-it-semi-back make-it-dark make-it-small">
+                Page {{currentPage}} of {{totalPages}}
             </div>
 
-            <a class="navbar-item make-it-rounded make-it-small" 
+            <a class="button section make-it-small" 
                 href="?page={{nextPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}" 
                 {{#if (eq currentPage totalPages)}}disabled{{/if}}>Next
             </a>
 
-            <div class="make-it-dark small-section make-it-small">
-                Page {{currentPage}} of {{totalPages}}
-            </div>
         </div>
     </section>
 
