--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -13,7 +13,6 @@
     <div class="grid-container-3c-by-1r">
         <div></div>
         <div class="box make-it-semi-back">
-            <h2 class="make-it-left make-it-dark make-it-rounded-top make-it-normal">Log in</h2>
             <div>
                 <form class="make-it-center" id="loginForm">
                     <div class="make-it-dark section" for="email">
@@ -25,16 +24,18 @@
                         <p class="make-it-dark small-section">Password</p>
                         <input class="input" name="password" type="password" required />
                     </div>
-                    <br>
-                    <div class="grid-container-2c-by-1r section">
+                    <div class="section">
                     
                         <button class="button is-primary make-it-dark make-it-normal" type="submit">
                             Login
                         </button>
-                    
-                        <a href="/register" class="button is-link is-light make-it-dark make-it-normal">
-                            Register
-                        </a>
+                        <div class="small-section">
+                            or 
+                            <a href="/register" class="is-link is-underlined make-it-dark make-it-normal">
+                                Register
+                            </a>
+                        </div>
+                        
                     
                     </div>
                 </form>
